edit text & list product

--- a/templates/components/slideshow_item.html
+++ b/templates/components/slideshow_item.html
@@ -1,9 +1,9 @@
 <div class="slideshow--left">
     <div class="slideshow__info">
         <div class="slideshow__info-inner">
-            <h3 class="slideshow__name text-split transition">Yarn Tiệm Len Handmade Xin chào !</h3>
-            <p class="slideshow__desc text-split">Tiệm mình cũng cấp các sản phẩm handmade được làm từ len. Với nhu cầu lựa chọn mẫu ngày một nhiều, vì thế để đáp ứng được trọn vẹn nhất yếu cầu của khách hàng, mình đã lập nên trang này để cung cấp các mẫu cho mọi người lựa chọn. Không chỉ
-                các mẫu có bên dưới mà mình còn nhận các mẫu theo yêu cầu. Lựa mẫu xong, liên hệ với mình qua instagram để đặt hàng nhé!</p>
+            <h3 class="slideshow__name text-split transition">Yarn Tiệm Len Handmade <br> Xin chào !</h3>
+            <p class="slideshow__desc text-split">Tiệm mình cung cấp các sản phẩm handmade được làm từ len. Với nhu cầu lựa chọn mẫu ngày một nhiều, vì thế để đáp ứng được trọn vẹn nhất yêu cầu của khách hàng, mình đã lập nên trang này để cung cấp các mẫu cho mọi người lựa chọn. Không chỉ
+                các mẫu có bên dưới mà mình còn nhận các mẫu theo yêu cầu. Lựa mẫu xong, liên hệ với mình để đặt hàng nhé!</p>
         </div>
     </div>
 </div>
