--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -192,20 +192,26 @@
 .product__button {
     display: grid;
     place-items: center;
-    width: 70px;
-    height: 70px;
+    width: 55px;
+    height: 55px;
     border-radius: 50%;
     background: #c9b3794d;
 }
 
 .product__button i {
-    font-size: 40px;
+    font-size: 28px;
     color: var(--clr-web-light-french-beige);
     transition: all 0.3s ease-out;
 }
 
 .product__button:hover i {
     color: var(--clr-text-white);
+}
+
+.product__photo-inner img {
+    width: 100%;
+    height: 300px;
+    object-fit: cover;
 }
 
 
