--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -15,8 +15,31 @@
 
 /* General */
 
+.f-f\:bold {
+    font-family: var(--font-f-bold);
+}
+
+.f-f\:semibold {
+    font-family: var(--font-f-semibold);
+}
+
+.f-f\:medium {
+    font-family: var(--font-f-medium);
+}
+
+.f-sz\:28px {
+    font-size: clamp(20px, 3.5vw, 28px);
+}
+
+.f-sz\:32px {
+    font-size: clamp(24px, 3.75vw, 32px);
+}
+
+.f-sz\:60px {
+    font-size: clamp(38px, 3.75vw, 60px);
+}
+
 .section__header {
-    text-align: center;
     margin-bottom: 3rem;
 }
 
@@ -27,10 +50,7 @@
 }
 
 .home__title {
-    font-family: var(--font-f-semibold);
-    font-size: clamp(24px, 3.75vw, 32px);
     color: var(--clr-text-primary);
-    text-transform: capitalize;
 }
 
 .index-separator {
@@ -227,7 +247,7 @@
     display: flex;
     justify-content: center;
     align-items: baseline;
-    gap: 0.375rem 2rem;
+    gap: 0.375rem 1.5rem;
     list-style: none;
     padding: 0;
     margin: 0;
@@ -247,6 +267,93 @@
     color: #AA9356;
 }
 
+.wrapper {
+    margin: 60px auto;
+    text-align: center;
+}
+
+h1 {
+    margin-bottom: 1.25em;
+}
+
+#pagination-demo {
+    display: inline-block;
+    margin-bottom: 1.75em;
+}
+
+#pagination-demo li {
+    display: inline-block;
+}
+
+.page-content {
+    background: #eee;
+    display: inline-block;
+    padding: 10px;
+    width: 100%;
+    max-width: 660px;
+}
+
+
+/* Insta Post */
+
+.ig-post__inner {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 2rem 5rem;
+}
+
+.ig-post__info {
+    width: 37.5%;
+}
+
+.ig-post__info-item {
+    display: flex;
+    align-items: center;
+    column-gap: 1rem;
+}
+
+.ig-post__info-item:not(:last-child) {
+    margin-bottom: 1.5rem;
+}
+
+.ig-post__info-item-icon {
+    flex-shrink: 0;
+}
+
+.ig-post__info-item-desc {
+    font-size: 21px;
+    color: var(--clr-text-primary);
+}
+
+.ig-post__btn {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 0.5rem;
+    width: fit-content;
+    font-size: 21px;
+    color: var(--clr-text-primary);
+    background: #fff;
+    box-shadow: 7px 7px 0px 0px #000;
+    padding: 1rem 1.5rem;
+    margin-top: 5rem;
+    transition: all 0.3s ease-out;
+}
+
+.ig-post__btn:hover {
+    background: #fff;
+    box-shadow: 0px 1px 5px 1px #000;
+}
+
+.ig-post__btn i {
+    transition: all 0.3s ease-out;
+}
+
+.ig-post__btn:hover i {
+    transform: translateX(5px);
+}
+
 
 /*footer*/
 
@@ -264,5 +371,3 @@
     gap: 10px;
     align-items: center;
 }
-
-.footer__media-name {}
