--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -21,13 +21,26 @@
         --spacing: 25px;
     }
 
+    /* Header */
+    .header {
+        display: block;
+    }
+
     /* Navigation */
     .hamburger {
         display: flex;
     }
 
+    .close-button {
+        display: block;
+    }
+
     .nav__item.--is-logo {
         display: none;
+    }
+
+    .navigation {
+        padding: 0;
     }
 
     .navigation nav {
@@ -110,7 +123,8 @@
 
     /* Criteria */
     .criteria .separate {
-        display: none;
+        width: 100%;
+        height: 1px;
     }
 
     .criteria__item {
