--- a/assets/css/reset.css
+++ b/assets/css/reset.css
@@ -57,6 +57,10 @@ hr {
     border: none;
 }
 
+li {
+    list-style: none;
+}
+
 input[type=number]::-webkit-outer-spin-button,
 input[type=number]::-webkit-inner-spin-button {
     -webkit-appearance: none;
