--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -3,46 +3,37 @@
 /* Responsive */
 
 @media(max-width:1023px) {
-
     /* Display None */
     /* Spacing */
     [class*='-30'] {
         --spacing: 15px;
     }
-
     [class*='-40'],
     [class*='-50'],
     [class*='-60'] {
         --spacing: 20px;
     }
-
     [class*='-70'],
     [class*='-80'] {
         --spacing: 25px;
     }
-
     /* Header */
     .header {
         display: block;
     }
-
     /* Navigation */
     .hamburger {
         display: flex;
     }
-
     .close-button {
         display: block;
     }
-
     .nav__item.--is-logo {
         display: none;
     }
-
     .navigation {
         padding: 0;
     }
-
     .navigation nav {
         opacity: 0;
         visibility: hidden;
@@ -53,7 +44,6 @@
         left: 0;
         transition: all 0.3s ease-out;
     }
-
     .navigation nav.show {
         opacity: 1;
         visibility: visible;
@@ -62,14 +52,12 @@
         background: #2a2a2a;
         padding: 3rem 2rem;
     }
-
     .nav__list {
         display: flex;
         flex-direction: column;
         align-items: flex-start;
         gap: 2rem;
     }
-
     .nav__item a {
         color: var(--clr-text-white);
     }
@@ -78,62 +66,61 @@
 @media (min-width:851px) and (max-width:1023px) {}
 
 @media(max-width:850px) {
-
     /* General */
     .section__header {
         margin-bottom: 1rem;
     }
-
     /* Product */
     .product__list.flex-container {
         --columns: 2;
         --space-horizontal: 10px;
     }
-
     /* Slideshow */
     .slideshow--left {
         width: 100%;
     }
-
     .slideshow--right {
         display: none;
     }
-
     /* IG Post */
     .ig-post__info {
         display: none;
+    }
+    /*Details-info*/
+    .details-info__inner {
+        flex-direction: column;
+        align-items: center;
     }
 }
 
 @media(max-width:767px) {}
 
 @media(max-width:576px) {
-
     /* Product */
     .product__list.flex-container {
         --columns: 1;
         --space-horizontal: 0px;
         --space-vertical: 1.25rem;
     }
-
     /* Navigation */
     .navigation nav.show {
         right: 0;
     }
-
     /* Criteria */
     .criteria .separate {
         width: 100%;
         height: 1px;
     }
-
     .criteria__item {
         width: 100%;
     }
-
     .criteria__photo {
         margin-bottom: 1rem;
     }
 }
 
-@media(max-width:369px) {}
+@media(max-width:425px) {
+    .qr-code {
+        flex-direction: column;
+    }
+}
